ch35 clarifying edits

--- a/src/collections/proof-of-existence/35.md
+++ b/src/collections/proof-of-existence/35.md
@@ -3,9 +3,9 @@ title: "Harbinger's Record (2)"
 arc: 3
 chapter: 35
 tags: ["veric", "luka", "jules"]
-lastEdit: 2025-10-25
+lastEdit: 2025-10-26
 pubDate: 2025-10-25
-authorsNotes: <p>And that concludes arc 3!</p> <p>Luka has a very different narrative style than Acacius, and there are some very abstract things happening, so there's a lot being left to interpretation this time. There's still a lot of stuff to chew on this chapter, though, so I'd love to know what you think -- about everyone's relationships, the powers in this world, anything really.</p> <p>I'll be going on hiatus until I finish the next arc so as to avoid mid-arc cliffhangers. Estimated time... maybe a month? Keep an eye on my tumblr for updates.</p> <p>And, as always, thank you for reading!</p>
+authorsNotes: <p>And that concludes arc 3!</p> <p>Luka has a very different narrative style than Acacius, and there are some very abstract things happening, so there's a lot being left to interpretation this time. There's still a lot of stuff to chew on this chapter, though, so I'd love to know what you think -- about everyone's relationships, the powers in this world, anything really.</p> <p>I'll be going on hiatus until I finish the next arc so as to avoid mid-arc cliffhangers. Estimated time... maybe a month? Keep an eye on my tumblr for updates.</p> <p>And, as always, thank you for reading!</p> <p>Edit 10/26 - clarified Luka's reasoning for "two years," clarified how the effects of the wolf affected the world, fixed list formatting issue.</p>
 ---
 Shortly after Professor Raoul defeated Tiziri, Ghost said their farewell and left, leaving Luka alone in his head once more. 
 
@@ -13,7 +13,7 @@ Luka was well aware of the nature of the beings he could call, but Ghost was so 
 
 But if Ghost could hear his “voice,” then they were just as dangerous as the other entities he’d summoned before. As dangerous as the devouring beast of the moon paths, as the wolf in his shadow. 
 
-As dangerous as that looming presence, distant yet omnipresent like night sky in the daytime, that he’d sensed when using his power to call out to Ghost. 
+As dangerous as that looming presence, distant yet omnipresent like night sky in the daytime, that he’d sensed when calling out to Ghost. 
 
 Luka had planned to follow Veric to help with the preparations for the ritual. However, Acacius approached him first.  
 
@@ -35,7 +35,7 @@ Veric bit her lip.
 
 “Don’t kill each other while I’m not looking, okay?” 
 
-Luka had to wait two more years for that. 
+Luka had to wait two more years for that. It wouldn’t do to break his promise to Ghost. 
 
 “It might be better than some ways to go,” said Acacius. Veric gave him a horrified look, so he clarified, tonelessly, “Joke.” 
 
@@ -759,7 +759,9 @@ Hands gripped his shoulders. A pair of golden eyes, spinning in fractals, swallo
 
 “You think I like killing my friends?”  
 
-They hit the water and sank. Luka tore flesh apart and ate madly. Blood flowed on his tongue.
+They hit the water and sank. Luka tore flesh apart. Blood flowed on his tongue. The sensation only stoked his madness. He wanted to eat it all. 
+
+The darkness of the world came alive, writhing with his hunger. Every shadow another mouth. Land, sea, flesh, bone, it didn’t matter. He devoured everything he could touch. 
 
 It wasn’t enough, not nearly enough. 
 
@@ -785,9 +787,9 @@ And then he died.
 
 `[Top contributors:` 
 
-- `Acacius Duval`
+1. `Acacius Duval`
 
-- `Luka ◾◾◾`
+2. `Luka ◾◾◾`
 
 `To those who have cut the serpent’s tail, the rewards will be distributed accordingly.]`
 
