ch37 update, ch36 typo fixes, glossary fixes

--- a/src/collections/proof-of-existence/36.md
+++ b/src/collections/proof-of-existence/36.md
@@ -187,7 +187,7 @@ First, I should see what I’d gained from solving KP-04.
 
 When I checked my Record of Existence, the black pages at the back of the book remained unchanged. However, `[Inevitable Survivor of Disaster]`’s description was slightly different. 
 
-> **Passive Effect:** As long as the title bearer is determined to survive, close observations of their surroundings will increase the accuracy of their danger sense and survival instincts. The title bearer possesses increases resistance to perception-warping abilities. They may also extend their perception of danger to threats against nearby friends, family, and allies, even if it does not directly threaten the title bearer. 
+> **Passive Effect:** As long as the title bearer is determined to survive, close observations of their surroundings will increase the accuracy of their danger sense and survival instincts. The title bearer possesses increased resistance to perception-warping abilities. They may also extend their perception of danger to threats against nearby friends, family, and allies, even if it does not directly threaten the title bearer. 
 > 
 > However, the title bearer will be easily entangled with dangerous situations as well.
 
