--- a/src/collections/proof-of-existence/36.md
+++ b/src/collections/proof-of-existence/36.md
@@ -3,9 +3,9 @@ title: "Mediation (1)"
 arc: 4
 chapter: 36
 tags: ["veric", "sacha", "crescent sun", "cyprian duval", "tripartite"]
-lastEdit: 2025-12-13
+lastEdit: 2025-12-22
 pubDate: 2025-12-13
-authorsNotes: <p>We're back with a "slice of life" arc! Let's see what ramifications the last arc has on Eunseok's day-to-day life.</p> <p>In addition to detailing some of Eunseok's past, this chapter also introduces the Tripartite and some important figures in Iyiria's world. What do you think of them?</p> <p>A World Glossary has been added to the index.</p>
+authorsNotes: <p>We're back with a "slice of life" arc! Let's see what ramifications the last arc has on Eunseok's day-to-day life.</p> <p>In addition to detailing some of Eunseok's past, this chapter also introduces the Tripartite and some important figures in Iyiria's world. What do you think of them?</p> <p>A World Glossary has been added to the index.</p> <p><b>Edit Dec 22:</b> clarified that the dragon pendant was part of the treatment given to Eunseok, not something he originally had. The dragon pendant as a healing symbol has been mentioned before during Luka's first appearance and the duel with Linden.</p> 
 ---
 When my brother died, there wasn’t enough money to bury him in a casket, or to cremate him. No money to keep him cold in the morgue until funeral preparations were done, either. A night sister who sold on the corner gave me the funeral robes she’d originally prepared for herself, saying that she had time to buy another set, but my brother didn’t. I did my best to clean his mangled body before it went too bad. The robes didn’t fit right on him. I wrapped him in our only set of bedsheets and dragged his body out of the city, into the mountain, to bury him myself. 
 
@@ -145,7 +145,7 @@ It took a moment to catch my breath. When my heartbeat finally slowed, I sat up 
 
 It was one of the rooms in the school’s medical ward, where I’d stayed after my duel with Linden.
 
-I was on a sickbed covered in white and blue sheets, dressed in a clean linen smock; the worst of the wounds I’d sustained with Luka had almost completely faded away, and the blue dragon pendant hung around my neck emitted a gentle glow. I touched my throat gingerly. Somehow, the skin there was smooth with no hint of scarring. It didn’t hurt to swallow or breathe. 
+I was on a sickbed covered in white and blue sheets, dressed in a clean linen smock; the worst of the wounds I’d sustained with Luka had almost completely faded away, and a gentle glow emitted from the blue dragon pendant that had been hung around my neck. They'd done that the last time I stayed here, too. I touched my throat gingerly. Somehow, the skin there was smooth with no hint of scarring. It didn’t hurt to swallow or breathe. 
 
 My body was mending, but my mind was a mess. 
 
