refactor poe for arc support

--- a/src/collections/proof-of-existence/4-fallout/36.md
+++ b/src/collections/proof-of-existence/4-fallout/36.md
@@ -9,7 +9,7 @@ authorsNotes: <p>We're back with a "slice of life" arc! Let's see what ramificat
 ---
 When my brother died, there wasn’t enough money to bury him in a casket, or to cremate him. No money to keep him cold in the morgue until funeral preparations were done, either. A night sister who sold on the corner gave me the funeral robes she’d originally prepared for herself, saying that she had time to buy another set, but my brother didn’t. I did my best to clean his mangled body before it went too bad. The robes didn’t fit right on him. I wrapped him in our only set of bedsheets and dragged his body out of the city, into the mountain, to bury him myself. 
 
-Everyone knew he’d been killed by Lim Cheolhun, so no one came to help. No one came to the shitty memorial I scraped together afterwards, either. Lim Cheolhun and his gang kicked over the memorial table and smashed my brother’s photo. The fruits I’d picked from the mountains went into their mouths, while the flowers were trampled in the streets. With my brother out of the way, they wouldn’t kill me, but they’d make me into an example. Kick me around, order me around and make an example of me. Make sure no one dared to stand up to Lim Cheolhun again. 
+Everyone knew he’d been killed by Lim Cheolhun, so no one came to help. No one came to the shitty memorial I scraped together afterwards, either. Lim Cheolhun and his gang kicked over the memorial table and smashed my brother’s photo. The fruits I’d picked from the mountains went into their mouths, while the flowers were trampled in the streets. With my brother out of the way, they wouldn’t care to kill an orphaned nobody street rat like me, but they’d make me into an example. Kick me around, order me around, and make an example of me. Make sure no one dared to stand up to Lim Cheolhun again. 
 
 But I could endure it. And I could wait. 
 
