ch38 update, ch37 typo fix

--- a/src/collections/proof-of-existence/4-fallout/37.md
+++ b/src/collections/proof-of-existence/4-fallout/37.md
@@ -3,7 +3,7 @@ title: "Mediation (2)"
 arc: 4
 chapter: 37
 tags: ["sacha", "crescent sun", "cyprian duval", "cynara", "linden"]
-lastEdit: 2025-12-13
+lastEdit: 2025-12-20
 pubDate: 2025-12-13
 authorsNotes: <p>I love giving Eunseok funny problems...</p> <p>Thank you for all the comments last chapter! I have the next couple of weeks off of work so I finally have time to catch up.</p>
 ---
@@ -178,7 +178,7 @@ Before I could ask, Cynara shoved a huge stack of envelopes into my arms.
 
 “You haven’t updated your address yet,” she said. “All your mail is still coming to our house. I’m sick of answering them for you.” 
 
-Wow, another problem I didn’t know I had. I picked up an envelope and memorized Acacius’ previous address: 105 Veratrum Row, Nithemoore City. “I think you’ve been doing fine job managing so far. Why not keep it up?” 
+Wow, another problem I didn’t know I had. I picked up an envelope and memorized Acacius’ previous address: 105 Veratrum Row, Nithemoore City. “I think you’ve been doing a fine job managing so far. Why not keep it up?” 
 
 Cynara narrowed her eyes. “Ever since you accepted Father’s little punishment, all your former work has been hoisted onto me. Shouldn’t you have some sense of shame?” 
 
