--- a/src/collections/proof-of-existence/4-fallout/39.md
+++ b/src/collections/proof-of-existence/4-fallout/39.md
@@ -169,7 +169,7 @@ The Fantasm World was solved, and the solvers were killed before inheritance rul
 
 During that time, it was, of course, the common people of Iyiria who suffered. 
 
-Their food and homes were taken, their lands burned, their families conscripted, their bodies used to test the limits of MS-01’s medicinal technology. The panacaea was used to forcefully purged their pain, resentment, and sorrow until they could not even conceive of their suffering.
+Their food and homes were taken, their lands burned, their families conscripted, their bodies used to test the limits of SP-01’s medicinal technology. The panacaea was used to forcefully purge their pain, resentment, and sorrow until they could not even conceive of their suffering.
 
 It was this curious dearth of suffering that drew the attention of one of Signifier’s seven Hierarchs, the Dragon of Sorrow. On the day that would become known as the Dragonsday Festival, the Great Dragon descended upon Iyiria and took the lay of the land. 
 
