typos and edits, ch40 update

--- a/src/collections/proof-of-existence/2-ordinary-life/9.md
+++ b/src/collections/proof-of-existence/2-ordinary-life/9.md
@@ -64,7 +64,7 @@ Which left one other person I was willing to imitate.
 
 Chen Xiarui had always considered me a brother. He wouldn’t mind me borrowing his face for a while, would he? 
 
-I placed on the mask of [Honest Man’s Deception], and my appearance changed. 
+I placed on the mask of `[Honest Man’s Deception]`, and my appearance changed. 
 
 My line of sight was higher, now. Chen Xiarui’s black hair was cut short enough it didn’t fall into my eyes. I wore the clothes I always remembered him in: a worn coat, a turtleneck, and a weathered pair of boots. He hadn’t changed them even after I’d told him it was time to throw them away. 
 
@@ -98,7 +98,7 @@ Halfway down the street, the space opened up to a large courtyard. Light orange 
 
 Above the doors was a carved relief of a veiled and hooded figure smiling enigmatically, holding a seamless loop of knotted rope. 
 
-It reminded me uncomfortably of the tattoo that represented Acacius’ [Bound Prophet] title. 
+It reminded me uncomfortably of the tattoo that represented Acacius’ `[Bound Prophet]` title. 
 
 For a moment, I just stood there, staring at the knotted rope and trying to decide if I was making too much of a mental leap or not. 
 
