--- a/src/collections/proof-of-existence/4-fallout/39.md
+++ b/src/collections/proof-of-existence/4-fallout/39.md
@@ -19,7 +19,7 @@ After Veric disappeared into the storeroom with Artunis, Roxana was the first to
 
 Professor Raoul hesitated, but ultimately, he didn’t deny what Roxana said. 
 
-His relationship sure seemed compicated. I changed the subject before Roxana could poke at any more of his sore spots. 
+His relationship sure seemed complicated. I changed the subject before Roxana could poke at any more of his sore spots. 
 
 “Professor, you said this would be a quick meeting. With four of us here, how long will it take now?” 
 
@@ -303,7 +303,7 @@ Even her skill must have been affected by it. After all, I was careful with my w
 
 So, if a liar’s skill kept pulling carelessly formed sentences out of me, wouldn’t she turn me into a liar right along with her? 
 
-The title tattoo on my shoulder finally flared. A burning sensation branched up my arm and neck like lightning, straight for the “wound” in my head. Instead of blue ink, a white-hot flame spilled out from between my fingers. With a cry, I tore my hand away. The flame ignited along the ink like it was a trail of alcohol, burning it all away until there was nothing left. I squeezed my eyes shut and held my breath until the pain subsided. 
+The tattoo of the burning tree on my shoulder finally flared. A fiery sensation branched up my arm and neck like lightning, straight for the “wound” in my head. Instead of blue ink, a white-hot flame spilled out from between my fingers. With a cry, I tore my hand away. The flame ignited along the ink like it was a trail of alcohol, burning it all away until there was nothing left. I squeezed my eyes shut and held my breath until the pain subsided. 
 
 When I finally opened my eyes, Artunis was staring at me coldly. 
 
