fix frontmatter build error

--- a/src/collections/proof-of-existence/4-fallout/40.md
+++ b/src/collections/proof-of-existence/4-fallout/40.md
@@ -3,13 +3,13 @@ title: "Mediation (5)"
 arc: 4
 chapter: 40
 tags:
-  - luka
-  - veric
-  - roxana
-  - zaire
+    - luka
+    - veric
+    - roxana
+    - zaire
 lastEdit: 2026-01-10
 pubDate: 2026-01-10
-authorsNotes: <p>My friend, writing consultant, and occasional beta-reader Zarinthel is publishing <a href="https://www.royalroad.com/fiction/147181/game-designer-in-the-apocalypse">a new story</a> for those of you who like comedy, drama, slice of life, and zombie apocalypses. Zan Xinyi's life was already hell even before the apocalypse went into full swing. But if that wasn't bad enough, she's been saddled with a mysterious system that, regardless of her circumstances, wants her to become the world's best game designer. The good news is that she has no competition, due to the apocalypse. The bad news is that she's in the apocalypse. If Zan Xinyi has any good qualities, though, it's that she knows how to work with what she's got.</p> <p>Clarifications from last chapter: The title on his shoulder is the burning tree tattoo seen in Lone Astrologer's Record (1). Edited for clarity.</p> <p>This was another long chapter but I couldn't find a good place to split it, so here's 5.5k words. My favorite part was writing Eunseok's relationships with the others, particularly Zaire. What do you think?</p>
+authorsNotes: <p>Clarifications from last chapter - The title on his shoulder is the burning tree tattoo seen in Lone Astrologer's Record (1). Edited for clarity.</p> <p>This was another long chapter but I couldn't find a good place to split it, so here's 5.5k words. My favorite part was writing Eunseok's relationships with the others, particularly Zaire. What do you think?</p> <p>In other news, my friend, writing consultant, and occasional beta-reader Zarinthel is publishing <a href="https://www.royalroad.com/fiction/147181/game-designer-in-the-apocalypse">a new story</a> for those of you who like comedy, drama, slice of life, and zombie apocalypses.</p> <blockquote>Zan Xinyi's life was already hell even before the apocalypse went into full swing. But if that wasn't bad enough, she's been saddled with a mysterious system that, regardless of her circumstances, wants her to become the world's best game designer. The good news is that she has no competition, due to the apocalypse. The bad news is that she's in the apocalypse. If Zan Xinyi has any good qualities, though, it's that she knows how to work with what she's got.</blockquote>
 ---
 
 Roxana took us on a five minute walk to a snack shop off campus. As if she was afraid I’d change my mind and leave, she stuck to my side like glue, chatting lightly about the weather and the scenery, pulling in Veric or Luka when I failed to sufficiently supplement my part of the conversation. 
