fix continuity error

--- a/src/collections/proof-of-existence/4-fallout/36.md
+++ b/src/collections/proof-of-existence/4-fallout/36.md
@@ -59,7 +59,7 @@ My chest hurt.
 
 “Don’t talk to me with that face.” 
 
-The entity laughed. The knife and snake dimmed, and the mask and bow began to glow instead. The figure’s head spun until the second face was looking at me. It grew choppy black hair, dark and down-turned eyes, a map of burn scars that stretched with its crooked smile.
+The entity laughed. The knife and snake dimmed, and the mask and arrow began to glow instead. The figure’s head spun until the second face was looking at me. It grew choppy black hair, dark and down-turned eyes, a map of burn scars that stretched with its crooked smile.
 
 It was my face, after my sister had died. 
 
@@ -83,7 +83,7 @@ I glared.
 
 “Acacius’ history isn’t my history, and his mistakes aren’t my mistakes. The lives he’s touched and the relationships he’s ruined aren’t mine, either. If I really take on his name, isn’t that the same as saying I’ll take responsibility for everything that he has done?” 
 
-The mask and bow dimmed. In the third pair of arms, the key and lantern began to glow. The head spun to show me its last face: short black hair, bright eyes, and a chiseled jaw underneath a noble and gallant brow.
+The mask and arrow dimmed. In the third pair of arms, the key and lantern began to glow. The head spun to show me its last face: short black hair, bright eyes, and a chiseled jaw underneath a noble and gallant brow.
 
 With Chen Xiarui’s face, it said, `[Living neither as your old identity or your new one, do you intend to deceive everyone, just as you deceived him?]` 
 
