add art to authors notes

--- a/src/collections/proof-of-existence/4-fallout/41.md
+++ b/src/collections/proof-of-existence/4-fallout/41.md
@@ -15,6 +15,8 @@ authorsNotes: >
     <p>What was your favorite part of the chapter? Any new thoughts or theories?</p>
 
     <p>Acacius' Records have been added to the index page.</p>
+
+    <p><b>P.S.</b> Thank you to @scalymonster for commissioning <a href="https://skolomorphic.tumblr.com/post/805672263164755968/or-what-should-i-prove-to-you-that-im-really">art of chapter 22</a>.</p>
 ---
 
 It was a good thing I told Roxana I would come by in the afternoon, because I didn’t sleep until dawn. The light filtering through the curtains eventually woke me around noon. My head hurt and I felt like shit. 
