add tagging system

--- a/src/collections/proof-of-existence/4-fallout/36.md
+++ b/src/collections/proof-of-existence/4-fallout/36.md
@@ -2,7 +2,7 @@
 title: "Mediation (1)"
 arc: 4
 chapter: 36
-tags: ["veric", "sacha", "crescent sun", "cyprian duval", "tripartite"]
+tags: ["veric", "sacha", "crescent sun", "cyprian", "tripartite"]
 lastEdit: 2025-12-22
 pubDate: 2025-12-13
 authorsNotes: <p>We're back with a "slice of life" arc! Let's see what ramifications the last arc has on Eunseok's day-to-day life.</p> <p>In addition to detailing some of Eunseok's past, this chapter also introduces the Tripartite and some important figures in Iyiria's world. What do you think of them?</p> <p>A World Glossary has been added to the index.</p> <p><b>Edit Dec 22:</b> clarified that the dragon pendant was part of the treatment given to Eunseok, not something he originally had. The dragon pendant as a healing symbol has been mentioned before during Luka's first appearance and the duel with Linden.</p> 
