--- a/src/collections/proof-of-existence/4-fallout/37.md
+++ b/src/collections/proof-of-existence/4-fallout/37.md
@@ -2,7 +2,7 @@
 title: "Mediation (2)"
 arc: 4
 chapter: 37
-tags: ["sacha", "crescent sun", "cyprian duval", "cynara", "linden"]
+tags: ["sacha", "crescent sun", "cyprian", "cynara", "linden"]
 lastEdit: 2025-12-20
 pubDate: 2025-12-13
 authorsNotes: <p>I love giving Eunseok funny problems...</p> <p>Thank you for all the comments last chapter! I have the next couple of weeks off of work so I finally have time to catch up.</p>
