--- a/src/collections/proof-of-existence/4-fallout/41.md
+++ b/src/collections/proof-of-existence/4-fallout/41.md
@@ -5,8 +5,8 @@ chapter: 41
 tags:
     - veric
     - roxana
-    - corisade
-    - acacius duval
+    - corisande
+    - acacius
 lastEdit: 2026-01-17
 pubDate: 2026-01-17
 authorsNotes: >
