--- a/src/collections/proof-of-existence/4-fallout/41.md
+++ b/src/collections/proof-of-existence/4-fallout/41.md
@@ -25,7 +25,7 @@ I dragged myself up to cook a simple meal and sat to eat by the kitchen window, 
 
 Not for the first time, I imagined leaving this place. 
 
-Just pick up the money the Duvals had given me, pack a back of clothes and my stash of non-perishable foods, catch one of the shuttles out of the city, and keep going until I was sick of it. 
+Just pick up the money the Duvals had given me, pack a bag of clothes and my stash of non-perishable foods, catch one of the shuttles out of the city, and keep going until I was sick of it. 
 
 But even if I left, Acacius’ curse would be hanging on me like a leash.
 
@@ -189,7 +189,7 @@ I stuffed the brochure into my pocket and proceeded through the doors to the mai
 
 Rows of velvet-lined pews faced the elevated platform at the end of the hall, where an altar and a pulpit both stood. A grand painting of a serpentine blue dragon covered the wall. Stained glass windows cast their colored light onto the hardwood floor. 
 
-I spotted Roxana by her lavender hair, quietly meditating in the front row. Unlike the casual blouse and skirt she wore to our previous meeting, today she was dressed dark blue garments hemmed with silver thread. They were draped over white robes and tied together with a cerulean rope. Most prominent of all were the two ink-dark horns she wore as a headdress, glimmering with an ocean sheen. A gauzy blue veil fell from the headdress’ base to frame her face. 
+I spotted Roxana by her lavender hair, quietly meditating in the front row. Unlike the casual blouse and skirt she wore to our previous meeting, today she was dressed in dark blue garments hemmed with silver thread. They were draped over white robes and tied together with a cerulean rope. Most prominent of all were the two ink-dark horns she wore as a headdress, glimmering with an ocean sheen. A gauzy blue veil fell from the headdress’ base to frame her face. 
 
 The Dragon Shrine’s clothes were pretty damn cool, weren’t they? 
 
