ch43 update, minor edits

--- a/src/collections/proof-of-existence/1-new-world/8.md
+++ b/src/collections/proof-of-existence/1-new-world/8.md
@@ -78,7 +78,7 @@ Sacha didn’t linger on it. With a wave of her hand, Luka’s sword returned it
 
 Luka obediently sat down. At her expectant look, he organized his thoughts and spoke. 
 
-“The first entity was, from what I understood, an amalgamation of forgotten grudges that had accumulated within the moon path realm. Although it responded to my call, it immediately became hostile to me because I was from the reverse side of the realm — in this case, from Kosmonymia. I am unsure if the entity is a Fantasm Spirit that was brought into Kosmonymia, or if it naturally emerged when the moon path realm was recreated here.” 
+“The first entity was, from what I understood, an amalgamation of forgotten grudges that had accumulated within the moon path realm. Although it responded to my call, it immediately became hostile to me because I was from the reverse side of the realm — in this case, from Kosmonymia. I am unsure if the entity is a Fantasm spirit that was brought into Kosmonymia, or if it naturally emerged when the moon path realm was recreated here.” 
 
 “A temporary aggregate form is usually unstable, so we shouldn’t have to worry about it becoming active. I’m more concerned about the second entity you mentioned.” 
 
