--- a/src/collections/proof-of-existence/2-ordinary-life/9.md
+++ b/src/collections/proof-of-existence/2-ordinary-life/9.md
@@ -106,7 +106,7 @@ For a moment, I just stood there, staring at the knotted rope and trying to deci
 
 I couldn’t suppress my flinch entirely as I turned around. 
 
-A figure in a hooded cloak stood there, holding a golden crook with a lantern at the end. The darkness condensed inside that frame radiated out into the surroundings, distorting the light. Shadow hid the face more than it had any right to at this time of day. How had they slipped past my senses? 
+A figure in a hooded cloak stood there, holding a black crook with a lantern at the end. The darkness condensed inside the iron frame radiated out into the surroundings, distorting the light. Shadow hid the face more than it had any right to at this time of day. How had they slipped past my senses? 
 
 The figure raised their head, revealing a handsome young man with brown skin, short braids woven with golden beads, and a warm and sunny smile. 
 
@@ -126,7 +126,7 @@ Still, when Isul gestured for me to come along, I followed his lead.
 
 He took me inside beyond the main gathering area, past stained-glass windows and a large stone altar, and through a small archway to a long hallway full of doors. Isul opened one such door for me with a courteous half-bow. A real gentleman. I went inside and looked around. 
 
-Despite a lack of windows, it was a small and comfortable room with a thick, woven carpet covering the floor. Isul closed the door behind us and moved a slider above the handle to indicate the room was occupied. He leaned his dark lamp against the wall and lit the incense under a carved relief of the Secret-Keeper, before gesturing for me to sit one of the cushion around the low table in the center. 
+Despite a lack of windows, it was a small and comfortable room with a thick, woven carpet covering the floor. Isul closed the door behind us and moved a slider above the handle to indicate the room was occupied. He leaned his dark lamp against the wall and lit the incense under a carved relief of the Secret-Keeper, before gesturing for me to sit on one of the cushions around the low table in the center. 
 
 I sat at the cushion closest to the door and watched him take out tea leaves and a bronze teapot from the drawers beneath the relief. He placed the teapot on a metal stand on the table, and I soon heard the water begin to heat. 
 
