ch44 update, minor edits

--- a/src/collections/proof-of-existence/4-fallout/42.md
+++ b/src/collections/proof-of-existence/4-fallout/42.md
@@ -6,7 +6,7 @@ tags:
     - cynara
     - zaire
     - isul
-lastEdit: 2026-01-24
+lastEdit: 2026-02-07
 pubDate: 2026-01-24
 authorsNotes: >
     <p>Great news everyone. Chapter tags are now functional.</p>
@@ -196,11 +196,11 @@ I untied the ribbon and carefully pulled the wrapping paper apart without rippin
 
 Laid on a soft piece of white cloth was a flat, rectangular block with a glossy screen, protected by a light green case. It was more solid than the holographic seams I’d seen before, and more delicate than the brick-like phones that the militias used in my past life. It went without saying that slum dwellers like me didn’t get phones of our own. 
 
-I reached into touch the seam, but my hand froze about an inch away from the screen. 
+I reached in to touch the seam, but my hand froze about an inch away from the screen. 
 
 It was like every muscle in my body had locked down. My heart pounded, my hair stood on end. The dread of an unseen catastrophe cast its shadow over me. 
 
-Don’t use it. 
+*Don’t use it.*
 
 Zaire reached past me to touch the screen, and it lit up with a clock overlaying a picture of a crocodile. 
 
