--- a/src/collections/proof-of-existence/4-fallout/43.md
+++ b/src/collections/proof-of-existence/4-fallout/43.md
@@ -5,7 +5,7 @@ chapter: 43
 tags:
     - isul
     - tripartite
-lastEdit: 2026-01-31
+lastEdit: 2026-02-07
 pubDate: 2026-01-31
 authorsNotes: >
     <p>Not all cuckoos are brood parasites, and not all brood parasites have eggs & hatchlings that look like the host species’ offspring. Please forgive Isul for his thematically significant but scientifically unrigorous metaphors.</p>
@@ -160,7 +160,7 @@ The Secret-Keeper, who both kept and revealed what was hidden, was also known as
 
 And the Scribe, who perpetuated and opposed the cycles of history, was also known as the Obliterator. 
 
-A Triarch’s apostle drew power from their emergent aspect, and their apostate drew from their inverted aspect. One could be both an apostle and an apostate, though it was somewhat unusual due to the difficulties of committing to even one. 
+Those who swore and upheld certain vows to the Tripartite could channel some of their authority. This was the most common way people had access to their power. A Triarch’s apostle drew power from their emergent aspect, and their apostate drew from their inverted aspect. One could be both an apostle and an apostate, though it was somewhat unusual due to the difficulties of committing to even one of a Triarch’s aspects. 
 
 Even if Isul looked happy explaining all of this, I didn’t like the sound of any of these gods ruling the world, okay?
 
@@ -186,7 +186,7 @@ With that decision made, I inquired with Isul about obtaining titles, particular
 
 “Achievement titles will never be easy to earn,” Isul told me. “What’s difficult for a child is easy for an adult, and what’s impossible for a commoner can be done by a king with a wave of his hand. An achievement for a Myth rank is naturally different from a Chronicle rank’s.” 
 
-The only achievement title I had was earned after nearly dying in KP-04. Just the thought of what it’d take to reach Legend made my stomach hurt. 
+The only achievement title I knew I had was earned after nearly dying in KP-04. Just the thought of what it’d take to reach Legend made my stomach hurt. 
 
 “It can also be challenging to earn unique titles. After all, as you grow, instead of earning a new title, one of your preexisting titles may evolve with you,” Isul explained. “For example, one of the most common evolution lines is from novice to mastery. A sword user would go from `[Sword Novice]` to `[Apprentice]`, `[Adept]`, and then `[Master]`.” 
 
@@ -234,4 +234,4 @@ In just one moment, it felt like the tea lost all its taste.
 
 He smiled. In that moment, sitting under the Secret-Keeper’s relief and cast under his lamp’s shadow, that expression looked just like the Tripartite’s. 
 
-“Even if you don’t mean to, someone might end up just like that cuckoo bird.” 
+“Even without meaning to, someone might end up just like that cuckoo bird.” 
