--- a/src/collections/proof-of-existence/4-fallout/44.md
+++ b/src/collections/proof-of-existence/4-fallout/44.md
@@ -21,7 +21,7 @@ Before I departed from the Secret-Keeper’s temple, Isul explained that I could
 
 I didn’t plan to show anyone my Record, and if something weird happened during the ritual I definitely didn’t want anyone to see it, so I’d have to visit the Scribe’s temple when I had time. 
 
-I left the Secret-Keeper’s temple with a dampened mood and a new talisman. Isul had given me a blessing from the Secret-Keeper, not the Signifier, to help keep my secrets hidden. I hadn’t intended to get one, but he’d made it without asking me first. I figured as long as it wasn’t the Signifier’s talisman, it was fine. I really didn’t want a repeat of the curse I’d gotten in KP-04. 
+I left the Secret-Keeper’s temple with a dampened mood and a new talisman. This time, Isul had given me a blessing from the Secret-Keeper, not the Signifier, to help keep my secrets hidden. I hadn’t intended to get one, but he’d made it without asking me first. I figured as long as it wasn’t the Signifier’s talisman, it was fine. I really didn’t want a repeat of the curse I’d gotten in KP-04. 
 
 After taking a few minutes to get my emotions back in order, I headed downtown towards the Pearl Dive. 
 
@@ -75,11 +75,11 @@ He leaned in a little closer.
 
 Oh. I was more than fine with selling those guys out. “Aren’t you better off diggin’ into what the officers of the law have found?”
 
-“So, you know somethin’?” Etienne leaned in close with a smile, exposing his blunt canines. “C’mon, cough it up. Where’s the trust between us?” 
+“So, you know somethin’?” Etienne grinned, exposing his blunt canines. “C’mon, cough it up. Where’s the trust between us?” 
 
 I furrowed my eyebrows and hesitated before saying slowly, “I won’t lie to you, but it’s up to you to double check that everything’s true.” 
 
-Etienne smirked. “Sounds like you want me to pay for bad info.” 
+He smirked. “Sounds like you want me to pay for bad info.” 
 
 “If you don’t wanna hear it, I can take it somewhere else…” I pretended to get up, but Etienne grabbed my arm and pulled me back. 
 
