ch45 update, minor changes

--- a/src/collections/proof-of-existence/2-ordinary-life/10.md
+++ b/src/collections/proof-of-existence/2-ordinary-life/10.md
@@ -3,7 +3,7 @@ title: "Mundane Troubles (2)"
 arc: 2
 chapter: 10
 tags: ["bakhta", "dalileh", "mehran", "xander", "dagian", "luka", "rhoswen"]
-lastEdit: 2025-05-10
+lastEdit: 2026-02-14
 pubDate: 2025-05-10
 authorsNotes: <p>Thank you for all the comments. Life has been busy recently, but I'll do my best to respond soon.</p> <p>This arc, we'll be learning more about Kosmonymia's magic, as well as taking a crack at some magic academy webnovel tropes. I don't know how many of you are familiar with the genre, though. What do you think of Acacius' new school struggles?</p>
 ---
@@ -188,7 +188,7 @@ Xander clicked his tongue and turned his head away. Was that arrogance or embarr
 
 “And you, girl. What’s your name?” 
 
-A tall girl with gold bangles, long purple hair, and straight-cut bangs shading her eyes planted her golden scythe in the ground, bowing deeply. “Dagian Naveen, madam.” 
+A tall, dark-skinned girl with gold bangles and long purple hair planted her golden greatsword in the ground, bowing deeply. “Dagian Naveen, madam.” 
 
 “You’ve got the same issue as young Xander. Your light magic may be dangerous to your allies, but that means you should work on your control, not give up on fighting alongside others.” 
 
