update crossy promo description

--- a/src/collections/proof-of-existence/4-fallout/45.md
+++ b/src/collections/proof-of-existence/4-fallout/45.md
@@ -16,10 +16,10 @@ authorsNotes: >
     <p>I've answered everyone's comments on the last two chapters and hopefully will have time to catch up with more this week. Thanks for your patience.</p>
 
     <p>Last of all, some news. Crossy, my long-time friend, co-creator, and occasional beta reader, has launched a new webtoon: the <a href="https://ynod.webcomic.ws/comics/1/#content-start">[Y/N] Observation Diary.</a></p>
-    
-    <p>Crossy is always coming up with fascinating and deeply hilarious angles on familiar tropes, and is one of the most creative people I know. If you have ever wanted a comedy/horror LGBT-forward parody and deconstruction of the CEO romance genre, then this is the webtoon for you.</p> 
 
     <blockquote><p>Have you ever indulged in a fantasy of being beloved at your workplace, surrounded by people who love you, in a whirlwind romance with a handsome man with a mysterious past? Lovecraftian monsters do too! When an abyssal entity joins Supervisor Lee Minjae's department, he takes it upon himself to help one reality-bending monster succeed in its dreams.</p></blockquote>
+    
+    <p>Crossy is always coming up with fascinating and deeply hilarious angles on familiar tropes, and is one of the most creative people I know. If you have ever wanted a comedy/horror LGBT-forward parody of the CEO romance genre, then this is the webtoon for you.</p> 
 ---
 
 Veric stood in front of the mirror, looking at her new scars. 
