--- a/src/collections/proof-of-existence/4-fallout/45.md
+++ b/src/collections/proof-of-existence/4-fallout/45.md
@@ -398,7 +398,7 @@ And then, his expression fell away into such a complete and utter blankness it s
 
 Nastaran started. “Acacius? What do you mean? You wouldn’t…” 
 
-He cut her off, voice colder than the blade of his knife. 
+He cut her off as he kept speaking, voice colder than the blade of his knife. 
 
 “I respect your choices, Veric. I truly do. So that’s why I’m telling you this.” 
 
