--- a/src/collections/proof-of-existence/4-fallout/45.md
+++ b/src/collections/proof-of-existence/4-fallout/45.md
@@ -6,7 +6,7 @@ tags:
     - veric
     - roxana
     - nastaran
-lastEdit: 2026-02-14
+lastEdit: 2026-02-21
 pubDate: 2026-02-14
 authorsNotes: >
     <p>Originally the outside POV was only supposed to be one chapter, but it got so long that I had to split it into two. Veric has a lot of complicated feelings around gender and gendered roles; as for what that means for her own gender/sexuality, I’ve left it up to reader interpretation.</p>
@@ -210,7 +210,7 @@ Veric snorted. “Sorry, but I won’t give up that easily.”
 
 “No? Phooey. And here I was, thinking you might be having second doubts.” Roxana leaned back in her seat. “If you can’t heal anymore, how can you possibly be Saintess? Don’t be so irresponsible.” 
 
-It wasn’t impossible for Veric to obtain her healing talent again. All she had to do was work hard enough to earn another lifestyle title, and then sacrifice it to the scales of her World Proof. 
+It wasn’t impossible for Veric to obtain her healing talent again. All she had to do was work hard enough to earn another talent-based lifestyle title, and then sacrifice it to the scales of her World Proof. 
 
 But would she earn one in time for the Saintess selection? 
 
